--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,10 +34,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  bloc: ^9.0.0
-  dio: ^5.8.0+1
+  bloc: ^9.1.0
+  dio: ^5.9.0
   flutter_bloc: ^9.1.1
-  get_it: ^8.0.3
+  get_it: ^9.0.5
+  dartz: ^0.10.1
+
 
 dev_dependencies:
   flutter_test:
